# TDK

./: .gitignore  DHCP.drawio  TDK - Shortcut.lnk  Untitled Diagram.drawio
3DModels/: ContorlBox.stl  ControlBox.stl  UAVControlCover.FCStd  UAVControlCover.FCStd1  UAVControllerBox.FCStd  UAVControllerBox.FCStd1
Docs/: EstablishedNetworkTXProcess.drawio  PAKEKeyExchange.drawio  Untitled Diagram.drawio  assets.md
PICO_controller/: CMakeLists.txt
PICO_controller/code/: CMakeLists.txt  main.c
PICO_controller/code/include/: crc.h  elevon.h  lora.h  motor.h  network.h  servo.h
PICO_controller/code/source/: crc.c  elevon.c  lora.c  motor.c  network.c  servo.c
base_station/: Cargo.toml
flight-computer/: Cargo.toml
flight-computer-c/: .gitignore  CMakeLists.txt  part.csv  sdkconfig
flight-computer-pico/: CMakeLists.txt  flight-computer-pico.c
flight-contorl-c/: .project  CMakeLists.txt
flight-contorl-c-deprecated/: =  CMakeLists.txt  sdkconfig  sdkconfig.old
flight-control/: Cargo.toml  sdkconfig.debug
flight-control-c/: .gitignore  CMakeLists.txt
flight-control/src/: altimeter.rs  common.rs  concurrency.rs  gps.rs  joystick.rs  lcd.rs  lora.rs  main.rs  throttle.rs
raspi-drone/: Cargo.toml
raspi-drone/src/: main.rs
raspi-drone/src/device_self/: mod.rs
raspi-drone/src/network/: arp_registry.rs  arp_table.rs  blacklist.rs  device_status.rs  device_type.rs  lora.rs  mod.rs  packet.rs  queue.rs  receive_queue.rs  transmit_queue.rs
raspi-drone/src/network/packet/: error_types.rs  impl.rs  mod.rs  traits.rs
raspi-drone/src/network/test/: arp_registry_test.rs  mod.rs  packet_test.rs
(+64 files in other folders)
